# lexintake

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROVIDERS.md  claim_matrix.md
examples/: lexintake.toml  n8n-lexintake-workflow.json
scripts/: Install-LexIntake.ps1  Watch-MailIn.ps1
src/lexintake/: __init__.py  artifacts.py  cli.py  config.py  pipeline.py  winsafe.py
src/lexintake/providers/: __init__.py  anthropic_cua.py  gemini.py  harness.py  openai_cua.py
tests/: conftest.py  test_artifacts.py  test_cli.py  test_config.py  test_pipeline.py  test_providers.py  test_winsafe.py
